policies/policy-10.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-10
spec:
  rules:
    - name: check-label-10
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 10"
        pattern:
          metadata:
            labels:
              test: "?*"
