policies/policy-11.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-11
spec:
  rules:
    - name: check-label-11
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 11 (rename/restructure batch)"
        pattern:
          metadata:
            labels:
              test: "?*"
