policies/policy-13.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-13
spec:
  rules:
    - name: check-label-13
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 13 (rename/restructure batch)"
        pattern:
          metadata:
            labels:
              test: "?*"
