policies/policy-14.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-14
spec:
  rules:
    - name: check-label-14
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 14 (rename/restructure batch)"
        pattern:
          metadata:
            labels:
              test: "?*"
