policies/policy-2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-2
spec:
  rules:
    - name: check-label-2
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 2"
        pattern:
          metadata:
            labels:
              test: "?*"
