policies/policy-3.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-3
spec:
  rules:
    - name: check-label-3
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 3"
        pattern:
          metadata:
            labels:
              test: "?*"
