policies/policy-4.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-4
spec:
  rules:
    - name: check-label-4
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 4"
        pattern:
          metadata:
            labels:
              test: "?*"
