policies/policy-5.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-5
spec:
  rules:
    - name: check-label-5
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 5"
        pattern:
          metadata:
            labels:
              test: "?*"
