policies/policy-6.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-6
spec:
  rules:
    - name: check-label-6
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 6"
        pattern:
          metadata:
            labels:
              test: "?*"
