policies/policy-7.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-7
spec:
  rules:
    - name: check-label-7
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 7"
        pattern:
          metadata:
            labels:
              test: "?*"
