policies/policy-8.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-8
spec:
  rules:
    - name: check-label-8
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 8"
        pattern:
          metadata:
            labels:
              test: "?*"
