policies/policy-9.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: repo-policy-9
spec:
  rules:
    - name: check-label-9
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "repo-managed test policy 9"
        pattern:
          metadata:
            labels:
              test: "?*"
